panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__decl_in_global_scope__test_error_declaration_without_name.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/decl_in_global_scope/test_error_declaration_without_name.c
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: declaration does not specify a name
   ╭─[panko/tests/cases/decl_in_global_scope/test_error_declaration_without_name.c:1:1]
   │
 1 │ int = 42;
   │ ────┬────  
   │     ╰────── this looks like a declaration with type `int`
───╯

Error: declaration does not specify a name
   ╭─[panko/tests/cases/decl_in_global_scope/test_error_declaration_without_name.c:2:1]
   │
 2 │ char const* = nullptr;
   │ ───────────┬──────────  
   │            ╰──────────── this looks like a declaration with type `ptr<char const>`
───╯
